CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(pntr-host)
SET(CMAKE_C_STANDARD 17)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

FIND_PACKAGE(libretro REQUIRED)
FIND_PACKAGE(pntr REQUIRED)
FIND_PACKAGE(m3 REQUIRED)

SET(SDL_SHARED FALSE)
SET(SDL2_DISABLE_UNINSTALL TRUE)
FIND_PACKAGE(SDL2 REQUIRED)

SET(PHYSFS_ARCHIVE_ZIP ON CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_7Z OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_GRP OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_WAD OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_HOG OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_MVL OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_QPAK OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_SLB OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_ISO9660 OFF CACHE BOOL "" FORCE)
SET(PHYSFS_ARCHIVE_VDF OFF CACHE BOOL "" FORCE)
SET(PHYSFS_BUILD_STATIC ON CACHE BOOL "" FORCE)
SET(PHYSFS_BUILD_SHARED OFF CACHE BOOL "" FORCE)
SET(PHYSFS_BUILD_TEST OFF CACHE BOOL "" FORCE)
SET(PHYSFS_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(PHYSFS_DISABLE_INSTALL OFF CACHE BOOL "" FORCE)
FIND_PACKAGE(physfs REQUIRED)

# target: libretro
FILE(GLOB_RECURSE SOURCE_FILES_LIBRETRO CONFIGURE_DEPENDS src/libretro.c)
ADD_LIBRARY(${PROJECT_NAME}-libretro SHARED ${SOURCE_FILES_LIBRETRO})
SET_TARGET_PROPERTIES(${PROJECT_NAME}-libretro PROPERTIES PREFIX "")
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}-libretro PUBLIC ${libretro_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}-libretro PRIVATE pntr m3 physfs-static)

# target: CLI
FILE(GLOB_RECURSE SOURCE_FILES_CLI CONFIGURE_DEPENDS src/cli.c)
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES_CLI})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE SDL2::SDL2 SDL2::SDL2main pntr)